[tool.poetry]
name = "client"
version = "0.1.0"
description = ""
authors = ["Harikeshav R <r.harikeshav@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
pyttsx3 = "^2.90"
speechrecognition = "^3.9.0"
python-dotenv = "^0.21.1"
notify-run = "^0.0.15"
rich = "^13.3.1"
pyaudio = "^0.2.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
